--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,246 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+
+.logo {
+	width:100px;
+}
+
+nav div {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    width:100%;
+}
+
+nav a {
+    width: 14%;
+	color: lightslategray;
+}
+
+.nav-box {
+	display:flex;
+    justify-content: space-between;
+}
+
+.box {
+	display:flex;
+	flex-flow:row;
+}
+
+body {
+	margin:0px 20%;
+	max-width: 100%;
+}
+
+.slogan {
+	font-size: 65px;
+	text-align: center;
+	margin-top:30%;
+}
+
+
+.getstarted {
+	border:1px solid gray;
+	width:179px;
+	text-align:center;
+	padding:3px;
+	margin:0 auto;
+	
+}
+
+.center{
+	text-align:center;
+}
+
+p {
+	letter-spacing: 1.5px;
+	padding:2%;
+	font-family: 'Cormorant Garamond', serif;
+}
+
+.paragraph {
+	width:30%;
+	margin:15px;
+}
+
+.middle-img {
+	width:100%;
+}
+
+footer {
+	text-align:center;
+}
+
+#slogan-box div{
+	display:flex;
+	flex-direction: column;
+}
+
+.box-column {
+	display:flex;
+	flex-direction: column;
+}
+
+section {
+	margin:15px;
+}
+
+.learn-more {	
+		border:1px solid gray;
+		width:160px;
+		text-align:center;
+		padding:4px;
+		border-radius: 5px;
+		margin-top:2%;
+}
+
+.border {
+	border:solid 1px black;
+	padding: 3%;
+	margin:4%;
+}
+
+.space {
+	margin:7px;
+	font-size: 30px;
+}
+
+ul {
+	list-style-type: square;
+	margin-left:35px;
+  }
+
+  @media (max-width: 800px) {
+    .header-img{
+        display:none;
+    }
+    body {
+        margin:0;
+    }
+    nav {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .logo{
+        margin:3% auto;
+        vertical-align: center;
+        width:20%;
+    }
+}
+
+  @media (max-width: 500px) {
+    
+    nav div{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav-box {
+        justify-content: center;
+    }
+    
+    nav {
+        display: flex;
+        flex-direction: column-reverse;
+        border:1px solid black;
+    }
+
+
+    .logo {
+        width:200px;
+    }
+
+    div a {
+        padding: 1%;
+        width: 100%;
+        text-align: center;
+        font-size:50px;
+        border:solid 1px black;
+    }
+
+    .header-img img {
+        display:none;
+    }
+
+    .box {
+        display:flex;
+        flex-direction: column;
+    }
+  }
+
+
+
